parser.output
Terminals unused in grammar

    TRUE
    FALSE
    READ
    NIL
    EXPR_START


Stato 78 1 conflitti shift/riduzione
Stato 88 1 conflitti shift/riduzione


Grammatica

    0 $accept: program $end

    1 program: global_statement_list

    2 global_statement_list: global_statement
    3                      | global_statement global_statement_list

    4 global_statement: assignment
    5                 | func_definition

    6 $@1: ε

    7 func_definition: FUNCTION ID '(' param_list ')' $@1 chunk END

    8 $@2: ε

    9 func_definition: FUNCTION ID '(' ')' $@2 chunk END

   10 param_list: param
   11           | param ',' param_list

   12 param: ID
   13      | ID '[' ']'

   14 assignment: name '=' expr

   15 chunk: statement_list

   16 statement_list: statement
   17               | statement_list statement

   18 statement: assignment
   19          | expr_statement
   20          | selection_statement
   21          | iteration_statement
   22          | return_statement
   23          | print_statement

   24 expr_statement: expr

   25 selection_statement: IF if_cond THEN chunk END
   26                    | IF if_cond THEN chunk ELSE chunk END

   27 if_cond: expr

   28 iteration_statement: FOR init ',' cond ',' update DO chunk END

   29 init: assignment
   30     | ε

   31 cond: expr
   32     | ε

   33 update: assignment
   34       | expr
   35       | ε

   36 return_statement: RETURN
   37                 | RETURN expr

   38 print_statement: PRINT '(' args ')'
   39                | PRINT '(' format_string ',' args ')'
   40                | PRINT '(' ')'

   41 format_string: STRING

   42 expr: name
   43     | number
   44     | func_call
   45     | expr '+' expr
   46     | expr '-' expr
   47     | expr '*' expr
   48     | expr '/' expr
   49     | NOT expr
   50     | expr AND expr
   51     | expr OR expr
   52     | expr '>' expr
   53     | expr '<' expr
   54     | expr GE expr
   55     | expr LE expr
   56     | expr EQ expr
   57     | expr NE expr
   58     | '(' expr ')'
   59     | '-' expr

   60 name: ID

   61 number: INT_NUM
   62       | FLOAT_NUM

   63 func_call: ID '(' args ')'
   64          | ID '(' ')'

   65 args: expr
   66     | expr ',' args


Simboli terminali e regole in cui appaiono

    $end (0) 0
    '(' (40) 7 9 38 39 40 58 63 64
    ')' (41) 7 9 38 39 40 58 63 64
    '*' (42) 47
    '+' (43) 45
    ',' (44) 11 28 39 66
    '-' (45) 46 59
    '/' (47) 48
    '<' (60) 53
    '=' (61) 14
    '>' (62) 52
    '[' (91) 13
    ']' (93) 13
    error (256)
    INT_NUM <s> (258) 61
    FLOAT_NUM <s> (259) 62
    TRUE (260)
    FALSE (261)
    IF (262) 25 26
    ELSE (263) 26
    THEN (264) 25 26
    FOR (265) 28
    DO (266) 28
    END (267) 7 9 25 26 28
    RETURN (268) 36 37
    FUNCTION (269) 7 9
    PRINT <s> (270) 38 39 40
    READ <s> (271)
    NIL (272)
    STRING <s> (273) 41
    AND (274) 50
    OR (275) 51
    GE (276) 54
    LE (277) 55
    EQ (278) 56
    NE (279) 57
    NOT (280) 49
    UMINUS (281)
    LOWER_THAN_EXPR (282)
    EXPR_START (283)
    ID <s> (284) 7 9 12 13 60 63 64


Simboli nonterminali e regole in cui appaiono

    $accept (42)
        on left: 0
    program (43)
        on left: 1
        on right: 0
    global_statement_list <ast> (44)
        on left: 2 3
        on right: 1 3
    global_statement <ast> (45)
        on left: 4 5
        on right: 2 3
    func_definition <ast> (46)
        on left: 7 9
        on right: 5
    $@1 (47)
        on left: 6
        on right: 7
    $@2 (48)
        on left: 8
        on right: 9
    param_list <ast> (49)
        on left: 10 11
        on right: 7 11
    param <ast> (50)
        on left: 12 13
        on right: 10 11
    assignment <ast> (51)
        on left: 14
        on right: 4 18 29 33
    chunk <ast> (52)
        on left: 15
        on right: 7 9 25 26 28
    statement_list <ast> (53)
        on left: 16 17
        on right: 15 17
    statement <ast> (54)
        on left: 18 19 20 21 22 23
        on right: 16 17
    expr_statement <ast> (55)
        on left: 24
        on right: 19
    selection_statement <ast> (56)
        on left: 25 26
        on right: 20
    if_cond <ast> (57)
        on left: 27
        on right: 25 26
    iteration_statement <ast> (58)
        on left: 28
        on right: 21
    init <ast> (59)
        on left: 29 30
        on right: 28
    cond <ast> (60)
        on left: 31 32
        on right: 28
    update <ast> (61)
        on left: 33 34 35
        on right: 28
    return_statement <ast> (62)
        on left: 36 37
        on right: 22
    print_statement <ast> (63)
        on left: 38 39 40
        on right: 23
    format_string <ast> (64)
        on left: 41
        on right: 39
    expr <ast> (65)
        on left: 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59
        on right: 14 24 27 31 34 37 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 65 66
    name <ast> (66)
        on left: 60
        on right: 14 42
    number <ast> (67)
        on left: 61 62
        on right: 43
    func_call <ast> (68)
        on left: 63 64
        on right: 44
    args <ast> (69)
        on left: 65 66
        on right: 38 39 63 66


State 0

    0 $accept: • program $end

    FUNCTION  shift e prosecuzione allo stato 1
    ID        shift e prosecuzione allo stato 2

    program                prosecuzione allo stato 3
    global_statement_list  prosecuzione allo stato 4
    global_statement       prosecuzione allo stato 5
    func_definition        prosecuzione allo stato 6
    assignment             prosecuzione allo stato 7
    name                   prosecuzione allo stato 8


State 1

    7 func_definition: FUNCTION • ID '(' param_list ')' $@1 chunk END
    9                | FUNCTION • ID '(' ')' $@2 chunk END

    ID  shift e prosecuzione allo stato 9


State 2

   60 name: ID •

    $default  riduzione con la regola 60 (name)


State 3

    0 $accept: program • $end

    $end  shift e prosecuzione allo stato 10


State 4

    1 program: global_statement_list •

    $default  riduzione con la regola 1 (program)


State 5

    2 global_statement_list: global_statement •
    3                      | global_statement • global_statement_list

    FUNCTION  shift e prosecuzione allo stato 1
    ID        shift e prosecuzione allo stato 2

    $default  riduzione con la regola 2 (global_statement_list)

    global_statement_list  prosecuzione allo stato 11
    global_statement       prosecuzione allo stato 5
    func_definition        prosecuzione allo stato 6
    assignment             prosecuzione allo stato 7
    name                   prosecuzione allo stato 8


State 6

    5 global_statement: func_definition •

    $default  riduzione con la regola 5 (global_statement)


State 7

    4 global_statement: assignment •

    $default  riduzione con la regola 4 (global_statement)


State 8

   14 assignment: name • '=' expr

    '='  shift e prosecuzione allo stato 12


State 9

    7 func_definition: FUNCTION ID • '(' param_list ')' $@1 chunk END
    9                | FUNCTION ID • '(' ')' $@2 chunk END

    '('  shift e prosecuzione allo stato 13


State 10

    0 $accept: program $end •

    $default  accetta


State 11

    3 global_statement_list: global_statement global_statement_list •

    $default  riduzione con la regola 3 (global_statement_list)


State 12

   14 assignment: name '=' • expr

    INT_NUM    shift e prosecuzione allo stato 14
    FLOAT_NUM  shift e prosecuzione allo stato 15
    '-'        shift e prosecuzione allo stato 16
    NOT        shift e prosecuzione allo stato 17
    ID         shift e prosecuzione allo stato 18
    '('        shift e prosecuzione allo stato 19

    expr       prosecuzione allo stato 20
    name       prosecuzione allo stato 21
    number     prosecuzione allo stato 22
    func_call  prosecuzione allo stato 23


State 13

    7 func_definition: FUNCTION ID '(' • param_list ')' $@1 chunk END
    9                | FUNCTION ID '(' • ')' $@2 chunk END

    ID   shift e prosecuzione allo stato 24
    ')'  shift e prosecuzione allo stato 25

    param_list  prosecuzione allo stato 26
    param       prosecuzione allo stato 27


State 14

   61 number: INT_NUM •

    $default  riduzione con la regola 61 (number)


State 15

   62 number: FLOAT_NUM •

    $default  riduzione con la regola 62 (number)


State 16

   59 expr: '-' • expr

    INT_NUM    shift e prosecuzione allo stato 14
    FLOAT_NUM  shift e prosecuzione allo stato 15
    '-'        shift e prosecuzione allo stato 16
    NOT        shift e prosecuzione allo stato 17
    ID         shift e prosecuzione allo stato 18
    '('        shift e prosecuzione allo stato 19

    expr       prosecuzione allo stato 28
    name       prosecuzione allo stato 21
    number     prosecuzione allo stato 22
    func_call  prosecuzione allo stato 23


State 17

   49 expr: NOT • expr

    INT_NUM    shift e prosecuzione allo stato 14
    FLOAT_NUM  shift e prosecuzione allo stato 15
    '-'        shift e prosecuzione allo stato 16
    NOT        shift e prosecuzione allo stato 17
    ID         shift e prosecuzione allo stato 18
    '('        shift e prosecuzione allo stato 19

    expr       prosecuzione allo stato 29
    name       prosecuzione allo stato 21
    number     prosecuzione allo stato 22
    func_call  prosecuzione allo stato 23


State 18

   60 name: ID •
   63 func_call: ID • '(' args ')'
   64          | ID • '(' ')'

    '('  shift e prosecuzione allo stato 30

    $default  riduzione con la regola 60 (name)


State 19

   58 expr: '(' • expr ')'

    INT_NUM    shift e prosecuzione allo stato 14
    FLOAT_NUM  shift e prosecuzione allo stato 15
    '-'        shift e prosecuzione allo stato 16
    NOT        shift e prosecuzione allo stato 17
    ID         shift e prosecuzione allo stato 18
    '('        shift e prosecuzione allo stato 19

    expr       prosecuzione allo stato 31
    name       prosecuzione allo stato 21
    number     prosecuzione allo stato 22
    func_call  prosecuzione allo stato 23


State 20

   14 assignment: name '=' expr •
   45 expr: expr • '+' expr
   46     | expr • '-' expr
   47     | expr • '*' expr
   48     | expr • '/' expr
   50     | expr • AND expr
   51     | expr • OR expr
   52     | expr • '>' expr
   53     | expr • '<' expr
   54     | expr • GE expr
   55     | expr • LE expr
   56     | expr • EQ expr
   57     | expr • NE expr

    AND  shift e prosecuzione allo stato 32
    OR   shift e prosecuzione allo stato 33
    '>'  shift e prosecuzione allo stato 34
    '<'  shift e prosecuzione allo stato 35
    GE   shift e prosecuzione allo stato 36
    LE   shift e prosecuzione allo stato 37
    EQ   shift e prosecuzione allo stato 38
    NE   shift e prosecuzione allo stato 39
    '+'  shift e prosecuzione allo stato 40
    '*'  shift e prosecuzione allo stato 42
    '/'  shift e prosecuzione allo stato 43

    $default  riduzione con la regola 14 (assignment)


State 21

   42 expr: name •

    $default  riduzione con la regola 42 (expr)


State 22

   43 expr: number •

    $default  riduzione con la regola 43 (expr)


State 23

   44 expr: func_call •

    $default  riduzione con la regola 44 (expr)


State 24

   12 param: ID •
   13      | ID • '[' ']'

    '['  shift e prosecuzione allo stato 44

    $default  riduzione con la regola 12 (param)


State 25

    9 func_definition: FUNCTION ID '(' ')' • $@2 chunk END

    $default  riduzione con la regola 8 ($@2)

    $@2  prosecuzione allo stato 45


State 26

    7 func_definition: FUNCTION ID '(' param_list • ')' $@1 chunk END

    ')'  shift e prosecuzione allo stato 46


State 27

   10 param_list: param •
   11           | param • ',' param_list

    ','  shift e prosecuzione allo stato 47

    $default  riduzione con la regola 10 (param_list)


State 28

   45 expr: expr • '+' expr
   46     | expr • '-' expr
   47     | expr • '*' expr
   48     | expr • '/' expr
   50     | expr • AND expr
   51     | expr • OR expr
   52     | expr • '>' expr
   53     | expr • '<' expr
   54     | expr • GE expr
   55     | expr • LE expr
   56     | expr • EQ expr
   57     | expr • NE expr
   59     | '-' expr •

    $default  riduzione con la regola 59 (expr)


State 29

   45 expr: expr • '+' expr
   46     | expr • '-' expr
   47     | expr • '*' expr
   48     | expr • '/' expr
   49     | NOT expr •
   50     | expr • AND expr
   51     | expr • OR expr
   52     | expr • '>' expr
   53     | expr • '<' expr
   54     | expr • GE expr
   55     | expr • LE expr
   56     | expr • EQ expr
   57     | expr • NE expr

    $default  riduzione con la regola 49 (expr)


State 30

   63 func_call: ID '(' • args ')'
   64          | ID '(' • ')'

    INT_NUM    shift e prosecuzione allo stato 14
    FLOAT_NUM  shift e prosecuzione allo stato 15
    '-'        shift e prosecuzione allo stato 16
    NOT        shift e prosecuzione allo stato 17
    ID         shift e prosecuzione allo stato 18
    '('        shift e prosecuzione allo stato 19
    ')'        shift e prosecuzione allo stato 48

    expr       prosecuzione allo stato 49
    name       prosecuzione allo stato 21
    number     prosecuzione allo stato 22
    func_call  prosecuzione allo stato 23
    args       prosecuzione allo stato 50


State 31

   45 expr: expr • '+' expr
   46     | expr • '-' expr
   47     | expr • '*' expr
   48     | expr • '/' expr
   50     | expr • AND expr
   51     | expr • OR expr
   52     | expr • '>' expr
   53     | expr • '<' expr
   54     | expr • GE expr
   55     | expr • LE expr
   56     | expr • EQ expr
   57     | expr • NE expr
   58     | '(' expr • ')'

    AND  shift e prosecuzione allo stato 32
    OR   shift e prosecuzione allo stato 33
    '>'  shift e prosecuzione allo stato 34
    '<'  shift e prosecuzione allo stato 35
    GE   shift e prosecuzione allo stato 36
    LE   shift e prosecuzione allo stato 37
    EQ   shift e prosecuzione allo stato 38
    NE   shift e prosecuzione allo stato 39
    '+'  shift e prosecuzione allo stato 40
    '-'  shift e prosecuzione allo stato 41
    '*'  shift e prosecuzione allo stato 42
    '/'  shift e prosecuzione allo stato 43
    ')'  shift e prosecuzione allo stato 51


State 32

   50 expr: expr AND • expr

    INT_NUM    shift e prosecuzione allo stato 14
    FLOAT_NUM  shift e prosecuzione allo stato 15
    '-'        shift e prosecuzione allo stato 16
    NOT        shift e prosecuzione allo stato 17
    ID         shift e prosecuzione allo stato 18
    '('        shift e prosecuzione allo stato 19

    expr       prosecuzione allo stato 52
    name       prosecuzione allo stato 21
    number     prosecuzione allo stato 22
    func_call  prosecuzione allo stato 23


State 33

   51 expr: expr OR • expr

    INT_NUM    shift e prosecuzione allo stato 14
    FLOAT_NUM  shift e prosecuzione allo stato 15
    '-'        shift e prosecuzione allo stato 16
    NOT        shift e prosecuzione allo stato 17
    ID         shift e prosecuzione allo stato 18
    '('        shift e prosecuzione allo stato 19

    expr       prosecuzione allo stato 53
    name       prosecuzione allo stato 21
    number     prosecuzione allo stato 22
    func_call  prosecuzione allo stato 23


State 34

   52 expr: expr '>' • expr

    INT_NUM    shift e prosecuzione allo stato 14
    FLOAT_NUM  shift e prosecuzione allo stato 15
    '-'        shift e prosecuzione allo stato 16
    NOT        shift e prosecuzione allo stato 17
    ID         shift e prosecuzione allo stato 18
    '('        shift e prosecuzione allo stato 19

    expr       prosecuzione allo stato 54
    name       prosecuzione allo stato 21
    number     prosecuzione allo stato 22
    func_call  prosecuzione allo stato 23


State 35

   53 expr: expr '<' • expr

    INT_NUM    shift e prosecuzione allo stato 14
    FLOAT_NUM  shift e prosecuzione allo stato 15
    '-'        shift e prosecuzione allo stato 16
    NOT        shift e prosecuzione allo stato 17
    ID         shift e prosecuzione allo stato 18
    '('        shift e prosecuzione allo stato 19

    expr       prosecuzione allo stato 55
    name       prosecuzione allo stato 21
    number     prosecuzione allo stato 22
    func_call  prosecuzione allo stato 23


State 36

   54 expr: expr GE • expr

    INT_NUM    shift e prosecuzione allo stato 14
    FLOAT_NUM  shift e prosecuzione allo stato 15
    '-'        shift e prosecuzione allo stato 16
    NOT        shift e prosecuzione allo stato 17
    ID         shift e prosecuzione allo stato 18
    '('        shift e prosecuzione allo stato 19

    expr       prosecuzione allo stato 56
    name       prosecuzione allo stato 21
    number     prosecuzione allo stato 22
    func_call  prosecuzione allo stato 23


State 37

   55 expr: expr LE • expr

    INT_NUM    shift e prosecuzione allo stato 14
    FLOAT_NUM  shift e prosecuzione allo stato 15
    '-'        shift e prosecuzione allo stato 16
    NOT        shift e prosecuzione allo stato 17
    ID         shift e prosecuzione allo stato 18
    '('        shift e prosecuzione allo stato 19

    expr       prosecuzione allo stato 57
    name       prosecuzione allo stato 21
    number     prosecuzione allo stato 22
    func_call  prosecuzione allo stato 23


State 38

   56 expr: expr EQ • expr

    INT_NUM    shift e prosecuzione allo stato 14
    FLOAT_NUM  shift e prosecuzione allo stato 15
    '-'        shift e prosecuzione allo stato 16
    NOT        shift e prosecuzione allo stato 17
    ID         shift e prosecuzione allo stato 18
    '('        shift e prosecuzione allo stato 19

    expr       prosecuzione allo stato 58
    name       prosecuzione allo stato 21
    number     prosecuzione allo stato 22
    func_call  prosecuzione allo stato 23


State 39

   57 expr: expr NE • expr

    INT_NUM    shift e prosecuzione allo stato 14
    FLOAT_NUM  shift e prosecuzione allo stato 15
    '-'        shift e prosecuzione allo stato 16
    NOT        shift e prosecuzione allo stato 17
    ID         shift e prosecuzione allo stato 18
    '('        shift e prosecuzione allo stato 19

    expr       prosecuzione allo stato 59
    name       prosecuzione allo stato 21
    number     prosecuzione allo stato 22
    func_call  prosecuzione allo stato 23


State 40

   45 expr: expr '+' • expr

    INT_NUM    shift e prosecuzione allo stato 14
    FLOAT_NUM  shift e prosecuzione allo stato 15
    '-'        shift e prosecuzione allo stato 16
    NOT        shift e prosecuzione allo stato 17
    ID         shift e prosecuzione allo stato 18
    '('        shift e prosecuzione allo stato 19

    expr       prosecuzione allo stato 60
    name       prosecuzione allo stato 21
    number     prosecuzione allo stato 22
    func_call  prosecuzione allo stato 23


State 41

   46 expr: expr '-' • expr

    INT_NUM    shift e prosecuzione allo stato 14
    FLOAT_NUM  shift e prosecuzione allo stato 15
    '-'        shift e prosecuzione allo stato 16
    NOT        shift e prosecuzione allo stato 17
    ID         shift e prosecuzione allo stato 18
    '('        shift e prosecuzione allo stato 19

    expr       prosecuzione allo stato 61
    name       prosecuzione allo stato 21
    number     prosecuzione allo stato 22
    func_call  prosecuzione allo stato 23


State 42

   47 expr: expr '*' • expr

    INT_NUM    shift e prosecuzione allo stato 14
    FLOAT_NUM  shift e prosecuzione allo stato 15
    '-'        shift e prosecuzione allo stato 16
    NOT        shift e prosecuzione allo stato 17
    ID         shift e prosecuzione allo stato 18
    '('        shift e prosecuzione allo stato 19

    expr       prosecuzione allo stato 62
    name       prosecuzione allo stato 21
    number     prosecuzione allo stato 22
    func_call  prosecuzione allo stato 23


State 43

   48 expr: expr '/' • expr

    INT_NUM    shift e prosecuzione allo stato 14
    FLOAT_NUM  shift e prosecuzione allo stato 15
    '-'        shift e prosecuzione allo stato 16
    NOT        shift e prosecuzione allo stato 17
    ID         shift e prosecuzione allo stato 18
    '('        shift e prosecuzione allo stato 19

    expr       prosecuzione allo stato 63
    name       prosecuzione allo stato 21
    number     prosecuzione allo stato 22
    func_call  prosecuzione allo stato 23


State 44

   13 param: ID '[' • ']'

    ']'  shift e prosecuzione allo stato 64


State 45

    9 func_definition: FUNCTION ID '(' ')' $@2 • chunk END

    INT_NUM    shift e prosecuzione allo stato 14
    FLOAT_NUM  shift e prosecuzione allo stato 15
    IF         shift e prosecuzione allo stato 65
    FOR        shift e prosecuzione allo stato 66
    RETURN     shift e prosecuzione allo stato 67
    PRINT      shift e prosecuzione allo stato 68
    '-'        shift e prosecuzione allo stato 16
    NOT        shift e prosecuzione allo stato 17
    ID         shift e prosecuzione allo stato 18
    '('        shift e prosecuzione allo stato 19

    assignment           prosecuzione allo stato 69
    chunk                prosecuzione allo stato 70
    statement_list       prosecuzione allo stato 71
    statement            prosecuzione allo stato 72
    expr_statement       prosecuzione allo stato 73
    selection_statement  prosecuzione allo stato 74
    iteration_statement  prosecuzione allo stato 75
    return_statement     prosecuzione allo stato 76
    print_statement      prosecuzione allo stato 77
    expr                 prosecuzione allo stato 78
    name                 prosecuzione allo stato 79
    number               prosecuzione allo stato 22
    func_call            prosecuzione allo stato 23


State 46

    7 func_definition: FUNCTION ID '(' param_list ')' • $@1 chunk END

    $default  riduzione con la regola 6 ($@1)

    $@1  prosecuzione allo stato 80


State 47

   11 param_list: param ',' • param_list

    ID  shift e prosecuzione allo stato 24

    param_list  prosecuzione allo stato 81
    param       prosecuzione allo stato 27


State 48

   64 func_call: ID '(' ')' •

    $default  riduzione con la regola 64 (func_call)


State 49

   45 expr: expr • '+' expr
   46     | expr • '-' expr
   47     | expr • '*' expr
   48     | expr • '/' expr
   50     | expr • AND expr
   51     | expr • OR expr
   52     | expr • '>' expr
   53     | expr • '<' expr
   54     | expr • GE expr
   55     | expr • LE expr
   56     | expr • EQ expr
   57     | expr • NE expr
   65 args: expr •
   66     | expr • ',' args

    AND  shift e prosecuzione allo stato 32
    OR   shift e prosecuzione allo stato 33
    '>'  shift e prosecuzione allo stato 34
    '<'  shift e prosecuzione allo stato 35
    GE   shift e prosecuzione allo stato 36
    LE   shift e prosecuzione allo stato 37
    EQ   shift e prosecuzione allo stato 38
    NE   shift e prosecuzione allo stato 39
    '+'  shift e prosecuzione allo stato 40
    '-'  shift e prosecuzione allo stato 41
    '*'  shift e prosecuzione allo stato 42
    '/'  shift e prosecuzione allo stato 43
    ','  shift e prosecuzione allo stato 82

    $default  riduzione con la regola 65 (args)


State 50

   63 func_call: ID '(' args • ')'

    ')'  shift e prosecuzione allo stato 83


State 51

   58 expr: '(' expr ')' •

    $default  riduzione con la regola 58 (expr)


State 52

   45 expr: expr • '+' expr
   46     | expr • '-' expr
   47     | expr • '*' expr
   48     | expr • '/' expr
   50     | expr • AND expr
   50     | expr AND expr •
   51     | expr • OR expr
   52     | expr • '>' expr
   53     | expr • '<' expr
   54     | expr • GE expr
   55     | expr • LE expr
   56     | expr • EQ expr
   57     | expr • NE expr

    '>'  shift e prosecuzione allo stato 34
    '<'  shift e prosecuzione allo stato 35
    GE   shift e prosecuzione allo stato 36
    LE   shift e prosecuzione allo stato 37
    EQ   shift e prosecuzione allo stato 38
    NE   shift e prosecuzione allo stato 39
    '+'  shift e prosecuzione allo stato 40
    '-'  shift e prosecuzione allo stato 41
    '*'  shift e prosecuzione allo stato 42
    '/'  shift e prosecuzione allo stato 43

    $default  riduzione con la regola 50 (expr)


State 53

   45 expr: expr • '+' expr
   46     | expr • '-' expr
   47     | expr • '*' expr
   48     | expr • '/' expr
   50     | expr • AND expr
   51     | expr • OR expr
   51     | expr OR expr •
   52     | expr • '>' expr
   53     | expr • '<' expr
   54     | expr • GE expr
   55     | expr • LE expr
   56     | expr • EQ expr
   57     | expr • NE expr

    '>'  shift e prosecuzione allo stato 34
    '<'  shift e prosecuzione allo stato 35
    GE   shift e prosecuzione allo stato 36
    LE   shift e prosecuzione allo stato 37
    EQ   shift e prosecuzione allo stato 38
    NE   shift e prosecuzione allo stato 39
    '+'  shift e prosecuzione allo stato 40
    '-'  shift e prosecuzione allo stato 41
    '*'  shift e prosecuzione allo stato 42
    '/'  shift e prosecuzione allo stato 43

    $default  riduzione con la regola 51 (expr)


State 54

   45 expr: expr • '+' expr
   46     | expr • '-' expr
   47     | expr • '*' expr
   48     | expr • '/' expr
   50     | expr • AND expr
   51     | expr • OR expr
   52     | expr • '>' expr
   52     | expr '>' expr •
   53     | expr • '<' expr
   54     | expr • GE expr
   55     | expr • LE expr
   56     | expr • EQ expr
   57     | expr • NE expr

    '+'  shift e prosecuzione allo stato 40
    '-'  shift e prosecuzione allo stato 41
    '*'  shift e prosecuzione allo stato 42
    '/'  shift e prosecuzione allo stato 43

    $default  riduzione con la regola 52 (expr)


State 55

   45 expr: expr • '+' expr
   46     | expr • '-' expr
   47     | expr • '*' expr
   48     | expr • '/' expr
   50     | expr • AND expr
   51     | expr • OR expr
   52     | expr • '>' expr
   53     | expr • '<' expr
   53     | expr '<' expr •
   54     | expr • GE expr
   55     | expr • LE expr
   56     | expr • EQ expr
   57     | expr • NE expr

    '+'  shift e prosecuzione allo stato 40
    '-'  shift e prosecuzione allo stato 41
    '*'  shift e prosecuzione allo stato 42
    '/'  shift e prosecuzione allo stato 43

    $default  riduzione con la regola 53 (expr)


State 56

   45 expr: expr • '+' expr
   46     | expr • '-' expr
   47     | expr • '*' expr
   48     | expr • '/' expr
   50     | expr • AND expr
   51     | expr • OR expr
   52     | expr • '>' expr
   53     | expr • '<' expr
   54     | expr • GE expr
   54     | expr GE expr •
   55     | expr • LE expr
   56     | expr • EQ expr
   57     | expr • NE expr

    '+'  shift e prosecuzione allo stato 40
    '-'  shift e prosecuzione allo stato 41
    '*'  shift e prosecuzione allo stato 42
    '/'  shift e prosecuzione allo stato 43

    $default  riduzione con la regola 54 (expr)


State 57

   45 expr: expr • '+' expr
   46     | expr • '-' expr
   47     | expr • '*' expr
   48     | expr • '/' expr
   50     | expr • AND expr
   51     | expr • OR expr
   52     | expr • '>' expr
   53     | expr • '<' expr
   54     | expr • GE expr
   55     | expr • LE expr
   55     | expr LE expr •
   56     | expr • EQ expr
   57     | expr • NE expr

    '+'  shift e prosecuzione allo stato 40
    '-'  shift e prosecuzione allo stato 41
    '*'  shift e prosecuzione allo stato 42
    '/'  shift e prosecuzione allo stato 43

    $default  riduzione con la regola 55 (expr)


State 58

   45 expr: expr • '+' expr
   46     | expr • '-' expr
   47     | expr • '*' expr
   48     | expr • '/' expr
   50     | expr • AND expr
   51     | expr • OR expr
   52     | expr • '>' expr
   53     | expr • '<' expr
   54     | expr • GE expr
   55     | expr • LE expr
   56     | expr • EQ expr
   56     | expr EQ expr •
   57     | expr • NE expr

    '+'  shift e prosecuzione allo stato 40
    '-'  shift e prosecuzione allo stato 41
    '*'  shift e prosecuzione allo stato 42
    '/'  shift e prosecuzione allo stato 43

    $default  riduzione con la regola 56 (expr)


State 59

   45 expr: expr • '+' expr
   46     | expr • '-' expr
   47     | expr • '*' expr
   48     | expr • '/' expr
   50     | expr • AND expr
   51     | expr • OR expr
   52     | expr • '>' expr
   53     | expr • '<' expr
   54     | expr • GE expr
   55     | expr • LE expr
   56     | expr • EQ expr
   57     | expr • NE expr
   57     | expr NE expr •

    '+'  shift e prosecuzione allo stato 40
    '-'  shift e prosecuzione allo stato 41
    '*'  shift e prosecuzione allo stato 42
    '/'  shift e prosecuzione allo stato 43

    $default  riduzione con la regola 57 (expr)


State 60

   45 expr: expr • '+' expr
   45     | expr '+' expr •
   46     | expr • '-' expr
   47     | expr • '*' expr
   48     | expr • '/' expr
   50     | expr • AND expr
   51     | expr • OR expr
   52     | expr • '>' expr
   53     | expr • '<' expr
   54     | expr • GE expr
   55     | expr • LE expr
   56     | expr • EQ expr
   57     | expr • NE expr

    '*'  shift e prosecuzione allo stato 42
    '/'  shift e prosecuzione allo stato 43

    $default  riduzione con la regola 45 (expr)


State 61

   45 expr: expr • '+' expr
   46     | expr • '-' expr
   46     | expr '-' expr •
   47     | expr • '*' expr
   48     | expr • '/' expr
   50     | expr • AND expr
   51     | expr • OR expr
   52     | expr • '>' expr
   53     | expr • '<' expr
   54     | expr • GE expr
   55     | expr • LE expr
   56     | expr • EQ expr
   57     | expr • NE expr

    '*'  shift e prosecuzione allo stato 42
    '/'  shift e prosecuzione allo stato 43

    $default  riduzione con la regola 46 (expr)


State 62

   45 expr: expr • '+' expr
   46     | expr • '-' expr
   47     | expr • '*' expr
   47     | expr '*' expr •
   48     | expr • '/' expr
   50     | expr • AND expr
   51     | expr • OR expr
   52     | expr • '>' expr
   53     | expr • '<' expr
   54     | expr • GE expr
   55     | expr • LE expr
   56     | expr • EQ expr
   57     | expr • NE expr

    $default  riduzione con la regola 47 (expr)


State 63

   45 expr: expr • '+' expr
   46     | expr • '-' expr
   47     | expr • '*' expr
   48     | expr • '/' expr
   48     | expr '/' expr •
   50     | expr • AND expr
   51     | expr • OR expr
   52     | expr • '>' expr
   53     | expr • '<' expr
   54     | expr • GE expr
   55     | expr • LE expr
   56     | expr • EQ expr
   57     | expr • NE expr

    $default  riduzione con la regola 48 (expr)


State 64

   13 param: ID '[' ']' •

    $default  riduzione con la regola 13 (param)


State 65

   25 selection_statement: IF • if_cond THEN chunk END
   26                    | IF • if_cond THEN chunk ELSE chunk END

    INT_NUM    shift e prosecuzione allo stato 14
    FLOAT_NUM  shift e prosecuzione allo stato 15
    '-'        shift e prosecuzione allo stato 16
    NOT        shift e prosecuzione allo stato 17
    ID         shift e prosecuzione allo stato 18
    '('        shift e prosecuzione allo stato 19

    if_cond    prosecuzione allo stato 84
    expr       prosecuzione allo stato 85
    name       prosecuzione allo stato 21
    number     prosecuzione allo stato 22
    func_call  prosecuzione allo stato 23


State 66

   28 iteration_statement: FOR • init ',' cond ',' update DO chunk END

    ID  shift e prosecuzione allo stato 2

    $default  riduzione con la regola 30 (init)

    assignment  prosecuzione allo stato 86
    init        prosecuzione allo stato 87
    name        prosecuzione allo stato 8


State 67

   36 return_statement: RETURN •
   37                 | RETURN • expr

    INT_NUM    shift e prosecuzione allo stato 14
    FLOAT_NUM  shift e prosecuzione allo stato 15
    ID         shift e prosecuzione allo stato 18
    '('        shift e prosecuzione allo stato 19

    $default  riduzione con la regola 36 (return_statement)

    expr       prosecuzione allo stato 88
    name       prosecuzione allo stato 21
    number     prosecuzione allo stato 22
    func_call  prosecuzione allo stato 23


State 68

   38 print_statement: PRINT • '(' args ')'
   39                | PRINT • '(' format_string ',' args ')'
   40                | PRINT • '(' ')'

    '('  shift e prosecuzione allo stato 89


State 69

   18 statement: assignment •

    $default  riduzione con la regola 18 (statement)


State 70

    9 func_definition: FUNCTION ID '(' ')' $@2 chunk • END

    END  shift e prosecuzione allo stato 90


State 71

   15 chunk: statement_list •
   17 statement_list: statement_list • statement

    INT_NUM    shift e prosecuzione allo stato 14
    FLOAT_NUM  shift e prosecuzione allo stato 15
    IF         shift e prosecuzione allo stato 65
    FOR        shift e prosecuzione allo stato 66
    RETURN     shift e prosecuzione allo stato 67
    PRINT      shift e prosecuzione allo stato 68
    '-'        shift e prosecuzione allo stato 16
    NOT        shift e prosecuzione allo stato 17
    ID         shift e prosecuzione allo stato 18
    '('        shift e prosecuzione allo stato 19

    $default  riduzione con la regola 15 (chunk)

    assignment           prosecuzione allo stato 69
    statement            prosecuzione allo stato 91
    expr_statement       prosecuzione allo stato 73
    selection_statement  prosecuzione allo stato 74
    iteration_statement  prosecuzione allo stato 75
    return_statement     prosecuzione allo stato 76
    print_statement      prosecuzione allo stato 77
    expr                 prosecuzione allo stato 78
    name                 prosecuzione allo stato 79
    number               prosecuzione allo stato 22
    func_call            prosecuzione allo stato 23


State 72

   16 statement_list: statement •

    $default  riduzione con la regola 16 (statement_list)


State 73

   19 statement: expr_statement •

    $default  riduzione con la regola 19 (statement)


State 74

   20 statement: selection_statement •

    $default  riduzione con la regola 20 (statement)


State 75

   21 statement: iteration_statement •

    $default  riduzione con la regola 21 (statement)

